swoleBackend/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: swole
  labels:
    name: swole
